--- a/index.html
+++ b/index.html
@@ -201,33 +201,33 @@
 						<h2>Program</h2>
 					</header>
 					<p>
+				
+					10:20 to 10:30 - Opening<br>
+					10:30 to 11:20 - Keynote talk - Renée Miller: "From Discovery to Integration of Data Lake
+						Tables"<br>
+					11:20 to 12:00 - Session 1
 					<ul>
-						<li>10:20 to 10:30 - Opening</li>
-						<li>10:30 to 11:20 - Keynote talk - Renée Miller: "From Discovery to Integration of Data Lake
-							Tables"</li>
-						<li>11:20 to 12:00 - Session 1</li>
-							<ul>
-								<li>11:20 to 11:40 Keti Korini, Christian Bizer. Column Type Annotation using ChatGPT</li>
-								<li>11:40 to 11:50 Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. Towards Generative Semantic Table Interpretation</li>
-								<li>11:50 to 12:00 Aneta Koleva, Martin Ringsquandl, Volker Tresp. Adversarial Attacks on Tables with Entity Swap</li>
-							</ul>
-						<li>12:00 to 13:30 - Lunch</li>
-						<li>13:30 to 14:20 - Keynote talk - Alon Halevy: "Personal Digital Data: Where LLMs Meet
-							Structured Data"</li>
-						<li>14:20 to 15:00 - Session 2</li>
-							<ul>
-								<li>14:20 to 14:30 Hamed Mirzaei, Davood Rafiei. Table Union Search with Preference</li>
-								<li>14:30 to 14:40 Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin, Sharad Dixit, Anupam Joshi. Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</li>
-								<li>14:40 to 14:50 Arif Usta, Semih Salihoglu. To Join or Not to Join: An Analysis on the Usefulness of Joining Tables in Open Government Data Portals</li>
-								<li>14:50 to 15:00 Liane Vogel, Carsten Binnig. WikiDBs: A Corpus Of Relational Databases From Wikidata</li>
-							</ul>
-						<li>15:00 to 15:50 - Poster session</li>
-							<ul>
-								<li>15:00 to 15:05 Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. Discovering and Integrating Tabular Data</li>
-								<li>15:05 to 15:10 Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris Plexousakis. Fair Sequential Group Recommendations in SQUIRREL Movies</li>
-							</ul>
-						<li>15:50 to 16:00 - Closing and Awards</li>
+						<li>11:20 to 11:40 Keti Korini, Christian Bizer. Column Type Annotation using ChatGPT</li>
+						<li>11:40 to 11:50 Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. Towards Generative Semantic Table Interpretation</li>
+						<li>11:50 to 12:00 Aneta Koleva, Martin Ringsquandl, Volker Tresp. Adversarial Attacks on Tables with Entity Swap</li>
 					</ul>
+					12:00 to 13:30 - Lunch<br>
+					13:30 to 14:20 - Keynote talk - Alon Halevy: "Personal Digital Data: Where LLMs Meet
+						Structured Data"<br>
+					14:20 to 15:00 - Session 2
+						<ul>
+							<li>14:20 to 14:30 Hamed Mirzaei, Davood Rafiei. Table Union Search with Preference</li>
+							<li>14:30 to 14:40 Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin, Sharad Dixit, Anupam Joshi. Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</li>
+							<li>14:40 to 14:50 Arif Usta, Semih Salihoglu. To Join or Not to Join: An Analysis on the Usefulness of Joining Tables in Open Government Data Portals</li>
+							<li>14:50 to 15:00 Liane Vogel, Carsten Binnig. WikiDBs: A Corpus Of Relational Databases From Wikidata</li>
+						</ul>
+					15:00 to 15:50 - Poster session
+						<ul>
+							<li>15:00 to 15:05 Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. Discovering and Integrating Tabular Data</li>
+							<li>15:05 to 15:10 Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris Plexousakis. Fair Sequential Group Recommendations in SQUIRREL Movies</li>
+						</ul>
+					15:50 to 16:00 - Closing and Awards
+					
 					</p>
 					<p>
 						Keynote by <a href="https://www.khoury.northeastern.edu/people/renee-miller/"><b>Renée Miller,
@@ -300,23 +300,23 @@
 						<h2>Accepted Papers</h2>
 					</header>
 					<ul>
-						<li>Keti Korini, Christian Bizer. <b>Column Type Annotation using ChatGPT</b></li>
-						<li>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with Preferences</b></li>
-						<li>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of Relational Databases From Wikidata</b>
+						<li>Keti Korini, Christian Bizer. <b>Column Type Annotation using ChatGPT</b> <a href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">[pdf]</a></li>
+						<li>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with Preferences</b> <a href="https://drive.google.com/file/d/1BI3N2KHJjwbR1vaj8zlmAbWuKAezoUH4/view?usp=sharing">[pdf]</a></li>
+						<li>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of Relational Databases From Wikidata</b> <a href="https://drive.google.com/file/d/1flvOopvk_a0isBL1dyDpf6NNUYXZKcNO/view?usp=sharing">[pdf]</a>
 						</li>
 						<li>Aneta Koleva, Martin Ringsquandl, Volker Tresp. <b>Adversarial Attacks on Tables with Entity
-								Swap</b></li>
+								Swap</b> <a href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a></li>
 						<li>Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. <b>Discovering and Integrating
-								Tabular Data</b></li>
+								Tabular Data</b> <a href="https://drive.google.com/file/d/1728gI1bNmUn9xwFUfstpcmp4YbqsHoE-/view?usp=sharing">[pdf]</a></li>
 						<li>Arif Usta, Semih Salihoglu. <b>To Join or Not to Join: An Analysis on the Usefulness of
-								Joining Tables in Open Government Data Portals</b></li>
+								Joining Tables in Open Government Data Portals</b> <a href="https://drive.google.com/file/d/1DA-xn94MTGcYU8lFmIuZ1rM_4RHh8rZu/view?usp=sharing">[pdf]</a></li>
 						<li>Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin, Sharad Dixit, Anupam Joshi.
-							<b>Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</b>
+							<b>Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</b> <a href="https://drive.google.com/file/d/1MDdumXsiiOhGjWU5_JxZMXi1QlIOh2mC/view?usp=sharing">[pdf]</a>
 						</li>
 						<li>Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. <b>Towards Generative Semantic Table
-								Interpretation</b></li>
+								Interpretation</b> <a href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">[pdf]</a></li>
 						<li>Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris
-							Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL Movies</b></li>
+							Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL Movies</b> <a href="https://drive.google.com/file/d/1M0sHJ6vjq6nPHWG8nQlOMZLrDtH0A_Ls/view?usp=sharing">[pdf]</a></li>
 					</ul>
 				</div>
 			</section>
