--- a/index.html
+++ b/index.html
@@ -200,37 +200,146 @@
 					<header class="major">
 						<h2>Program</h2>
 					</header>
-					<p>
-					10:20 to 10:30 - Opening <br>
-					10:30 to 11:20 - Keynote talk - Renée Miller: "From Discovery to Integration of Data Lake
-						Tables"<br>
-					11:20 to 12:00 - Session 1
-						<blockquote>
-							11:20 to 11:40 Keti Korini, Christian Bizer. <b>Column Type Annotation using ChatGPT</b> <a href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">[pdf]</a><br>
-							11:40 to 11:50 Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. <b>Towards Generative Semantic Table
-								Interpretation</b> <a href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">[pdf]</a><br>
-							11:50 to 12:00 Aneta Koleva, Martin Ringsquandl, Volker Tresp. <b>Adversarial Attacks on Tables with Entity
-								Swap</b> <a href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a>
-						</blockquote>
-					12:00 to 13:30 - Lunch<br>
-					13:30 to 14:20 - Keynote talk - Alon Halevy: "Personal Digital Data: Where LLMs Meet
-						Structured Data"<br>
-					14:20 to 15:00 - Session 2
-						<blockquote>
-							14:20 to 14:30 Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with Preferences</b> <a href="https://drive.google.com/file/d/1BI3N2KHJjwbR1vaj8zlmAbWuKAezoUH4/view?usp=sharing">[pdf]</a><br>
-							14:30 to 14:40 Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin, Sharad Dixit, Anupam Joshi. <b>Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</b> <a href="https://drive.google.com/file/d/1MDdumXsiiOhGjWU5_JxZMXi1QlIOh2mC/view?usp=sharing">[pdf]</a><br>
-							14:40 to 14:50 Arif Usta, Semih Salihoglu. <b>To Join or Not to Join: An Analysis on the Usefulness of
-								Joining Tables in Open Government Data Portals</b> <a href="https://drive.google.com/file/d/1DA-xn94MTGcYU8lFmIuZ1rM_4RHh8rZu/view?usp=sharing">[pdf]</a><br>
-							14:50 to 15:00 Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of Relational Databases From Wikidata</b> <a href="https://drive.google.com/file/d/1flvOopvk_a0isBL1dyDpf6NNUYXZKcNO/view?usp=sharing">[pdf]</a>
-						</blockquote>
-					15:00 to 15:50 - Poster session
-						<blockquote>
-							15:00 to 15:05 Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. <b>Discovering and Integrating
-								Tabular Data</b> <a href="https://drive.google.com/file/d/1728gI1bNmUn9xwFUfstpcmp4YbqsHoE-/view?usp=sharing">[pdf]</a>
-							15:05 to 15:10 Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL Movies</b> <a href="https://drive.google.com/file/d/1M0sHJ6vjq6nPHWG8nQlOMZLrDtH0A_Ls/view?usp=sharing">[pdf]</a>
-						</blockquote>
-					15:50 to 16:00 - Closing and Awards
-					</p>
+					<table>
+						<tr>
+							<td width="120"> 10:20-10:30 </td>
+							<td> <b>Opening</b> </td>
+						</tr>
+						<tr>
+							<td>10:30-11:20 </td>
+							<td> <b>Keynote talk </b> - Renée Miller: <b>From Discovery to Integration of Data Lake
+									Tables</b>
+							</td>
+						</tr>
+						<td> 11:20 - 12:00 </td>
+						<td> <b>Session 1</b> </td>
+						<tr>
+							<td colspan="2">
+								<table class="viz">
+									<tr>
+										<td width="120">11:20 - 11:40</td>
+										<td>Keti Korini, Christian Bizer. <b>Column Type Annotation using
+												ChatGPT
+												<a
+													href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">[pdf]</a>
+										</td>
+									</tr>
+									<tr>
+										<td width="120">11:40 - 11:50 </td>
+										<td>Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. <b>Towards Generative
+												Semantic
+												Table
+												Interpretation
+												<a
+													href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">[pdf]</a>
+										</td>
+									<tr>
+										<td>11:50 - 12:00 </td>
+										<td>Aneta Koleva, Martin Ringsquandl, Volker Tresp.
+											<b>Adversarial
+												Attacks on
+												Tables with Entity
+												Swap
+												<a
+													href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a>
+										</td>
+									</tr>
+								</table>
+						</tr>
+						</td>
+						</tr>
+						<tr>
+							<td>12:00 to 13:30 </td>
+							<td> <b>Lunch</b></td>
+						</tr>
+						<tr>
+							<td>13:30 - 14:20 </td>
+							<td> Keynote talk - Alon Halevy: <b>Personal Digital Data: Where LLMs Meet
+									Structured Data</b></td>
+						</tr>
+						<tr>
+							<td>14:20 - 15:00 </td>
+							<td> <b>Session 2</b> </td>
+						<tr>
+							<td colspan="2">
+								<table class="viz">
+									<tr>
+										<td width="120">14:20 - 14:30</td>
+										<td>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with
+												Preferences</b>
+											<a
+												href="https://drive.google.com/file/d/1BI3N2KHJjwbR1vaj8zlmAbWuKAezoUH4/view?usp=sharing">[pdf]</a>
+										</td>
+									</tr>
+									<tr>
+										<td>14:30 - 14:40 </td>
+										<td>Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin,
+											Sharad Dixit, Anupam Joshi. <b>Knowledge Graph-driven Tabular Data Discovery
+												from Scientific
+												Documents</b> <a
+												href="https://drive.google.com/file/d/1MDdumXsiiOhGjWU5_JxZMXi1QlIOh2mC/view?usp=sharing">[pdf]</a>
+										</td>
+									</tr>
+									<tr>
+										<td>14:40 - 14:50 </td>
+										<td> Arif Usta, Semih Salihoglu. <b>To Join or Not to Join: An
+												Analysis on
+												the
+												Usefulness of
+												Joining Tables in Open Government Data Portals</b> <a
+												href="https://drive.google.com/file/d/1DA-xn94MTGcYU8lFmIuZ1rM_4RHh8rZu/view?usp=sharing">[pdf]</a>
+										</td>
+									</tr>
+									<tr>
+										<td>14:50 - 15:00 </td>
+										<td>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of
+												Relational
+												Databases
+												From Wikidata</b> <a
+												href="https://drive.google.com/file/d/1flvOopvk_a0isBL1dyDpf6NNUYXZKcNO/view?usp=sharing">[pdf]</a>
+										</td>
+									</tr>
+								</table>
+						</tr>
+						</td>
+
+						</tr>
+						<tr>
+							<td>15:00 - 15:50 </td>
+							<td><b> Poster session </b></td>
+						</tr>
+						<tr>
+							<td colspan="2">
+								<table class="viz">
+									<tr>
+										<td width="120"> 15:00 - 15:05</td>
+										<td>Davood Rafiei, Arash Dargahi Nobari, Soroush
+											Omidvartehrani.
+											<b>Discovering
+												and Integrating
+												Tabular Data</b> <a
+												href="https://drive.google.com/file/d/1728gI1bNmUn9xwFUfstpcmp4YbqsHoE-/view?usp=sharing">[pdf]</a>
+										</td>
+									</tr>
+									<tr>
+										<td>15:05 to 15:10</td>
+										<td>Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou,
+											Kostas
+											Stefanidis,
+											Dimitris Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL
+												Movies</b> <a
+												href="https://drive.google.com/file/d/1M0sHJ6vjq6nPHWG8nQlOMZLrDtH0A_Ls/view?usp=sharing">[pdf]</a>
+										</td>
+
+									</tr>
+								</table>
+							</td>
+						</tr>
+						<tr>
+							<td>15:50 to 16:00 </td>
+							<td> <b>Closing and Awards</b> </td>
+						</tr>
+					</table>
 					<p>
 						Keynote by <a href="https://www.khoury.northeastern.edu/people/renee-miller/"><b>Renée Miller,
 								Northeastern University</b></a> <br>
@@ -302,23 +411,40 @@
 						<h2>Accepted Papers</h2>
 					</header>
 					<ul>
-						<li>Keti Korini, Christian Bizer. <b>Column Type Annotation using ChatGPT</b> <a href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">[pdf]</a></li>
-						<li>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with Preferences</b> <a href="https://drive.google.com/file/d/1BI3N2KHJjwbR1vaj8zlmAbWuKAezoUH4/view?usp=sharing">[pdf]</a></li>
-						<li>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of Relational Databases From Wikidata</b> <a href="https://drive.google.com/file/d/1flvOopvk_a0isBL1dyDpf6NNUYXZKcNO/view?usp=sharing">[pdf]</a>
+						<li>Keti Korini, Christian Bizer. <b>Column Type Annotation using ChatGPT</b> <a
+								href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">[pdf]</a>
+						</li>
+						<li>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with Preferences</b> <a
+								href="https://drive.google.com/file/d/1BI3N2KHJjwbR1vaj8zlmAbWuKAezoUH4/view?usp=sharing">[pdf]</a>
+						</li>
+						<li>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of Relational Databases From Wikidata</b>
+							<a
+								href="https://drive.google.com/file/d/1flvOopvk_a0isBL1dyDpf6NNUYXZKcNO/view?usp=sharing">[pdf]</a>
 						</li>
 						<li>Aneta Koleva, Martin Ringsquandl, Volker Tresp. <b>Adversarial Attacks on Tables with Entity
-								Swap</b> <a href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a></li>
+								Swap</b> <a
+								href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a>
+						</li>
 						<li>Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. <b>Discovering and Integrating
-								Tabular Data</b> <a href="https://drive.google.com/file/d/1728gI1bNmUn9xwFUfstpcmp4YbqsHoE-/view?usp=sharing">[pdf]</a></li>
+								Tabular Data</b> <a
+								href="https://drive.google.com/file/d/1728gI1bNmUn9xwFUfstpcmp4YbqsHoE-/view?usp=sharing">[pdf]</a>
+						</li>
 						<li>Arif Usta, Semih Salihoglu. <b>To Join or Not to Join: An Analysis on the Usefulness of
-								Joining Tables in Open Government Data Portals</b> <a href="https://drive.google.com/file/d/1DA-xn94MTGcYU8lFmIuZ1rM_4RHh8rZu/view?usp=sharing">[pdf]</a></li>
+								Joining Tables in Open Government Data Portals</b> <a
+								href="https://drive.google.com/file/d/1DA-xn94MTGcYU8lFmIuZ1rM_4RHh8rZu/view?usp=sharing">[pdf]</a>
+						</li>
 						<li>Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin, Sharad Dixit, Anupam Joshi.
-							<b>Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</b> <a href="https://drive.google.com/file/d/1MDdumXsiiOhGjWU5_JxZMXi1QlIOh2mC/view?usp=sharing">[pdf]</a>
+							<b>Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</b> <a
+								href="https://drive.google.com/file/d/1MDdumXsiiOhGjWU5_JxZMXi1QlIOh2mC/view?usp=sharing">[pdf]</a>
 						</li>
 						<li>Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. <b>Towards Generative Semantic Table
-								Interpretation</b> <a href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">[pdf]</a></li>
+								Interpretation</b> <a
+								href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">[pdf]</a>
+						</li>
 						<li>Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris
-							Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL Movies</b> <a href="https://drive.google.com/file/d/1M0sHJ6vjq6nPHWG8nQlOMZLrDtH0A_Ls/view?usp=sharing">[pdf]</a></li>
+							Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL Movies</b> <a
+								href="https://drive.google.com/file/d/1M0sHJ6vjq6nPHWG8nQlOMZLrDtH0A_Ls/view?usp=sharing">[pdf]</a>
+						</li>
 					</ul>
 				</div>
 			</section>
