--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 									<tr>
 										<td width="150">11:20 - 11:40</td>
 										<td>Keti Korini, Christian Bizer. <b>Column Type Annotation using
-												ChatGPT
+												ChatGPT</b>
 												<a
 													href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">[pdf]</a>
 										</td>
@@ -229,7 +229,7 @@
 										<td>Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. <b>Towards Generative
 												Semantic
 												Table
-												Interpretation
+												Interpretation</b>
 												<a
 													href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">[pdf]</a>
 										</td>
@@ -239,7 +239,7 @@
 											<b>Adversarial
 												Attacks on
 												Tables with Entity
-												Swap
+												Swap</b>
 												<a
 													href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a>
 										</td>
