--- a/index.html
+++ b/index.html
@@ -410,40 +410,42 @@
 					<header class="major">
 						<h2>Accepted Papers</h2>
 					</header>
+					<p>The joint proceedings of VLDB 2023 workshops are available here: <a
+								href="https://ceur-ws.org/Vol-3462/">https://ceur-ws.org/Vol-3462/</a>.</p>
 					<ul>
 						<li>Keti Korini, Christian Bizer. <b>Column Type Annotation using ChatGPT</b> <a
-								href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA1.pdf">[pdf]</a>
 						</li>
 						<li>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with Preferences</b> <a
-								href="https://drive.google.com/file/d/1BI3N2KHJjwbR1vaj8zlmAbWuKAezoUH4/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA2.pdf">[pdf]</a>
 						</li>
 						<li>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of Relational Databases From Wikidata</b>
 							<a
-								href="https://drive.google.com/file/d/1flvOopvk_a0isBL1dyDpf6NNUYXZKcNO/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA3.pdf">[pdf]</a>
 						</li>
 						<li>Aneta Koleva, Martin Ringsquandl, Volker Tresp. <b>Adversarial Attacks on Tables with Entity
 								Swap</b> <a
-								href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a>
-						</li>
-						<li>Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. <b>Discovering and Integrating
-								Tabular Data</b> <a
-								href="https://drive.google.com/file/d/1728gI1bNmUn9xwFUfstpcmp4YbqsHoE-/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA4.pdf">[pdf]</a>
 						</li>
 						<li>Arif Usta, Semih Salihoglu. <b>To Join or Not to Join: An Analysis on the Usefulness of
 								Joining Tables in Open Government Data Portals</b> <a
-								href="https://drive.google.com/file/d/1DA-xn94MTGcYU8lFmIuZ1rM_4RHh8rZu/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA5.pdf">[pdf]</a>
 						</li>
 						<li>Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin, Sharad Dixit, Anupam Joshi.
 							<b>Knowledge Graph-driven Tabular Data Discovery from Scientific Documents</b> <a
-								href="https://drive.google.com/file/d/1MDdumXsiiOhGjWU5_JxZMXi1QlIOh2mC/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA6.pdf">[pdf]</a>
 						</li>
 						<li>Viet-Phi Huynh, Yoan Chabot, Raphael Troncy. <b>Towards Generative Semantic Table
 								Interpretation</b> <a
-								href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA7.pdf">[pdf]</a>
 						</li>
 						<li>Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou, Kostas Stefanidis, Dimitris
 							Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL Movies</b> <a
-								href="https://drive.google.com/file/d/1M0sHJ6vjq6nPHWG8nQlOMZLrDtH0A_Ls/view?usp=sharing">[pdf]</a>
+								href="https://ceur-ws.org/Vol-3462/TADA8.pdf">[pdf]</a>
+						</li>
+						<li>Davood Rafiei, Arash Dargahi Nobari, Soroush Omidvartehrani. <b>Discovering and Integrating
+								Tabular Data</b> <a
+								href="https://ceur-ws.org/Vol-3462/TADA9.pdf">[pdf]</a>
 						</li>
 					</ul>
 				</div>
