--- a/video-showcase.html
+++ b/video-showcase.html
@@ -72,8 +72,7 @@
 						<tr>
 							<td>Keti Korini, Christian Bizer. <b>Column Type Annotation using
 									ChatGPT</b>
-								[<a
-									href="https://drive.google.com/file/d/1PaB7lBojI2oJ3mwHe8qiy9I-h-Dau_Wy/view?usp=sharing">pdf</a>]
+								[<a href="https://ceur-ws.org/Vol-3462/TADA1.pdf">pdf</a>]
 								<span class="expando" id="expand-1">[Video]</span>
 								<div class="expandable" id="expandable-1">
 									<iframe width="420" height="315" src="https://www.youtube.com/embed/UyTjiZXbc7g">
@@ -84,8 +83,7 @@
 						<tr>
 							<td>Viet-Phi Huynh, Yoan Chabot, Raphael Troncy.
 								<b>Towards Generative Semantic Table Interpretation</b>
-								[<a
-									href="https://drive.google.com/file/d/1gcEDnAT-HgjgSCd4n2xniP9q1KGjzPAc/view?usp=sharing">pdf</a>]
+								[<a href="https://ceur-ws.org/Vol-3462/TADA7.pdf">pdf</a>]
 								<span class="expando" id="expand-2">[Video]</span>
 								<div class="expandable" id="expandable-2">
 									<iframe width="420" height="315" src="https://www.youtube.com/embed/wwuVT0MV7pc">
@@ -98,8 +96,7 @@
 									Attacks on
 									Tables with Entity
 									Swap</b>
-								<a
-									href="https://drive.google.com/file/d/1WdGnJye7SxHP5aCydEZcTjF77_fY4BNQ/view?usp=sharing">[pdf]</a>
+								[<a href="https://ceur-ws.org/Vol-3462/TADA4.pdf">pdf</a>]
 								<span class="expando" id="expand-3">[Video]</span>
 								<div class="expandable" id="expandable-3">
 									Video Not Available Yet. Please Check Back Later.
@@ -110,8 +107,7 @@
 						<tr>
 							<td>Hamed Mirzaei, Davood Rafiei. <b>Table Union Search with
 									Preferences</b>
-								[<a
-									href="https://drive.google.com/file/d/1BI3N2KHJjwbR1vaj8zlmAbWuKAezoUH4/view?usp=sharing">pdf</a>]
+								[<a href="https://ceur-ws.org/Vol-3462/TADA2.pdf">pdf</a>]
 								<span class="expando" id="expand-4">[Video]</span>
 								<div class="expandable" id="expandable-4">
 									<iframe width="420" height="315" src="https://www.youtube.com/embed/cnU07A2bR2o">
@@ -123,8 +119,8 @@
 							<td>Vijay S Kumar, Varish Mulwad, Jenny Williams, Tim Finin,
 								Sharad Dixit, Anupam Joshi. <b>Knowledge Graph-driven Tabular Data Discovery
 									from Scientific
-									Documents</b> <a
-									href="https://drive.google.com/file/d/1MDdumXsiiOhGjWU5_JxZMXi1QlIOh2mC/view?usp=sharing">[pdf]</a>
+									Documents</b>
+								[<a href="https://ceur-ws.org/Vol-3462/TADA6.pdf">pdf</a>]
 								<span class="expando" id="expand-5">[Video]</span>
 								<div class="expandable" id="expandable-5">
 									Video Not Available Yet. Please Check Back Later.
@@ -136,8 +132,8 @@
 									Analysis on
 									the
 									Usefulness of
-									Joining Tables in Open Government Data Portals</b> <a
-									href="https://drive.google.com/file/d/1DA-xn94MTGcYU8lFmIuZ1rM_4RHh8rZu/view?usp=sharing">[pdf]</a>
+									Joining Tables in Open Government Data Portals</b>
+								[<a href="https://ceur-ws.org/Vol-3462/TADA5.pdf">pdf</a>]
 								<span class="expando" id="expand-6">[Video]</span>
 								<div class="expandable" id="expandable-6">
 									Video Not Available Yet. Please Check Back Later.
@@ -148,8 +144,7 @@
 							<td>Liane Vogel, Carsten Binnig. <b>WikiDBs: A Corpus Of
 									Relational
 									Databases
-									From Wikidata</b> [<a
-									href="https://drive.google.com/file/d/1flvOopvk_a0isBL1dyDpf6NNUYXZKcNO/view?usp=sharing">PDF</a>]
+									From Wikidata</b> [<a href="https://ceur-ws.org/Vol-3462/TADA3.pdf">PDF</a>]
 								<span class="expando" id="expand-7">[Video]</span>
 								<div class="expandable" id="expandable-7">
 									<iframe width="420" height="315" src="https://www.youtube.com/embed/zz70A8JCGO8">
@@ -163,8 +158,8 @@
 								Omidvartehrani.
 								<b>Discovering
 									and Integrating
-									Tabular Data</b> <a
-									href="https://drive.google.com/file/d/1728gI1bNmUn9xwFUfstpcmp4YbqsHoE-/view?usp=sharing">[pdf]</a>
+									Tabular Data</b>
+								[<a href="https://ceur-ws.org/Vol-3462/TADA9.pdf">pdf</a>]
 								<span class="expando" id="expand-8">[Video]</span>
 								<div class="expandable" id="expandable-8">
 									<iframe width="420" height="315" src="https://www.youtube.com/embed/pGRoYeCssxA">
@@ -177,8 +172,8 @@
 								Kostas
 								Stefanidis,
 								Dimitris Plexousakis. <b>Fair Sequential Group Recommendations in SQUIRREL
-									Movies</b> <a
-									href="https://drive.google.com/file/d/1M0sHJ6vjq6nPHWG8nQlOMZLrDtH0A_Ls/view?usp=sharing">[pdf]</a>
+									Movies</b>
+								[<a href="https://ceur-ws.org/Vol-3462/TADA8.pdf">pdf</a>]
 								<span class="expando" id="expand-9">[Video]</span>
 								<div class="expandable" id="expandable-9">
 									Video Not Available Yet. Please Check Back Later.
