--- a/video-showcase.html
+++ b/video-showcase.html
@@ -162,8 +162,7 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA9.pdf">pdf</a>]
 								<span class="expando" id="expand-8">[Video]</span>
 								<div class="expandable" id="expandable-8">
-									<iframe width="420" height="315" src="https://www.youtube.com/embed/pGRoYeCssxA">
-									</iframe>
+
 								</div>
 							</td>
 						</tr>
@@ -176,7 +175,8 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA8.pdf">pdf</a>]
 								<span class="expando" id="expand-9">[Video]</span>
 								<div class="expandable" id="expandable-9">
-									Video Not Available Yet. Please Check Back Later.
+									<iframe width="420" height="315" src="https://www.youtube.com/embed/G37lc8ieA9Q">
+									</iframe>
 								</div>
 							</td>
 
