video showcase page update

--- a/video-showcase.html
+++ b/video-showcase.html
@@ -75,7 +75,8 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA1.pdf">pdf</a>]
 								<span class="expando" id="expand-1">[Video]</span>
 								<div class="expandable" id="expandable-1">
-									<iframe width="420" height="315" src="https://www.youtube.com/embed/UyTjiZXbc7g">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/UyTjiZXbc7g">
 									</iframe>
 								</div>
 							</td>
@@ -86,7 +87,8 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA7.pdf">pdf</a>]
 								<span class="expando" id="expand-2">[Video]</span>
 								<div class="expandable" id="expandable-2">
-									<iframe width="420" height="315" src="https://www.youtube.com/embed/wwuVT0MV7pc">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/wwuVT0MV7pc">
 									</iframe>
 								</div>
 							</td>
@@ -110,7 +112,8 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA2.pdf">pdf</a>]
 								<span class="expando" id="expand-4">[Video]</span>
 								<div class="expandable" id="expandable-4">
-									<iframe width="420" height="315" src="https://www.youtube.com/embed/cnU07A2bR2o">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/cnU07A2bR2o">
 									</iframe>
 								</div>
 							</td>
@@ -147,7 +150,8 @@
 									From Wikidata</b> [<a href="https://ceur-ws.org/Vol-3462/TADA3.pdf">PDF</a>]
 								<span class="expando" id="expand-7">[Video]</span>
 								<div class="expandable" id="expandable-7">
-									<iframe width="420" height="315" src="https://www.youtube.com/embed/zz70A8JCGO8">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/zz70A8JCGO8">
 									</iframe>
 								</div>
 							</td>
@@ -162,7 +166,9 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA9.pdf">pdf</a>]
 								<span class="expando" id="expand-8">[Video]</span>
 								<div class="expandable" id="expandable-8">
-
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/pGRoYeCssxA">
+									</iframe>
 								</div>
 							</td>
 						</tr>
@@ -175,7 +181,8 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA8.pdf">pdf</a>]
 								<span class="expando" id="expand-9">[Video]</span>
 								<div class="expandable" id="expandable-9">
-									<iframe width="420" height="315" src="https://www.youtube.com/embed/G37lc8ieA9Q">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/G37lc8ieA9Q">
 									</iframe>
 								</div>
 							</td>
