video showcase page update

--- a/video-showcase.html
+++ b/video-showcase.html
@@ -131,7 +131,8 @@
 							</td>
 						</tr>
 						<tr>
-							<td> Arif Usta, Semih Salihoglu. <b>To Join or Not to Join: An
+							<td> Arif Usta, Semih Salihoglu.
+								<b>To Join or Not to Join: An
 									Analysis on
 									the
 									Usefulness of
@@ -139,7 +140,9 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA5.pdf">pdf</a>]
 								<span class="expando" id="expand-6">[Video]</span>
 								<div class="expandable" id="expandable-6">
-									Video Not Available Yet. Please Check Back Later.
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/HO6kM3y0iKM">
+									</iframe>
 								</div>
 							</td>
 						</tr>
@@ -172,6 +175,7 @@
 								</div>
 							</td>
 						</tr>
+
 						<tr>
 							<td>Eva Chrysostomaki, Maria Stratigi, Vasilis Efthymiou,
 								Kostas
@@ -186,8 +190,201 @@
 									</iframe>
 								</div>
 							</td>
-
 						</tr>
+
+						<tr>
+							<td>
+								(Invited) Udayan Khurana and Sainyam Galhotra.
+								<b>Semantic Concept Annotation for Tabular Data (CIKM'21 Paper)</b>
+								[<a href="https://arxiv.org/pdf/2012.08594.pdf">pdf</a>]
+								<span class="expando" id="expand-10">[Video]</span>
+								<div class="expandable" id="expandable-10">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/n1VMMiFss08">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Aamod Khatiwada, Roee Shraga, Wolfgang Gatterbauer, Renée J. Miller.
+								<b>Integrating Data Lake Tables (PVLDB, 2022)</b>
+								[<a href="https://www.vldb.org/pvldb/vol16/p932-khatiwada.pdf">pdf</a>]
+								<span class="expando" id="expand-11">[Video]</span>
+								<div class="expandable" id="expandable-11">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/4c6SYCwQ7uc">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Peng Li, Zhiyi Chen, Xu Chu, and Kexin Rong.
+								<b>DiffPrep: Differentiable Data Preprocessing Pipeline Search for Learning over Tabular
+									Data (SIGMOD 2023)</b>
+								[<a href="https://kexinrong.github.io/papers/diffprep-sigmod23.pdf">pdf</a>]
+								<span class="expando" id="expand-12">[Video]</span>
+								<div class="expandable" id="expandable-12">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/U6UwOI_-OiE">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Yuyang Dong, Chuan Xiao, Takuma Nozawa, Masafumi Enomoto, and Masafumi
+								Oyamada.
+								<b> DeepJoin: Joinable Table Discovery with Pre-Trained Language Models (PVLDB 2023)</b>
+								[<a href="https://arxiv.org/pdf/2212.07588.pdf">pdf</a>]
+								<span class="expando" id="expand-13">[Video]</span>
+								<div class="expandable" id="expandable-13">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/ZKk9OuobJxo">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Mukul Singh, José Cambronero Sánchez, Sumit Gulwani, Vu Le, Carina Negreanu,
+								Mohammad Raza, and Gust Verbruggen.
+								<b> CORNET: Learning Table Formatting Rules By Example (PVLDB 2023)</b>
+								[<a href="https://arxiv.org/pdf/2208.06032.pdf">pdf</a>]
+								<span class="expando" id="expand-14">[Video]</span>
+								<div class="expandable" id="expandable-14">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/AvysCgGMm8o">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Jiayi Wang, Chengliang Chai, Nan Tang, Jiabin Liu, and Guoliang Li
+								<b>Coresets over multiple tables for feature-rich and data-efficient machine learning
+									(PVLDB 2022)</b>
+								[<a href="https://www.vldb.org/pvldb/vol16/p64-wang.pdf">pdf</a>]
+								<span class="expando" id="expand-15">[Video]</span>
+								<div class="expandable" id="expandable-15">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/FZNv-NtqrSE">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Starmie: Semantics-aware Dataset Discovery from Data Lakes with Contextualized
+								Column-based Representation Learning
+								Grace Fan, Jin Wang, Yuliang Li, Dan Zhang, Renée J. Miller
+								<b> (PVLDB 2023)</b>
+								[<a href="https://www.vldb.org/pvldb/vol16/p1726-fan.pdf">pdf</a>]
+								<span class="expando" id="expand-16">[Video]</span>
+								<div class="expandable" id="expandable-16">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/i47PYk48yN4">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Yushi Sun, Hao Xin, and Lei Chen
+								<b> RECA: Related Tables Enhanced Column Semantic Type Annotation Framework (PVLDB
+									2023)</b>
+								[<a href="https://www.vldb.org/pvldb/vol16/p1319-sun.pdf">pdf</a>]
+								<span class="expando" id="expand-17">[Video]</span>
+								<div class="expandable" id="expandable-17">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/MFSStil62GM">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Mahdi Esmailoghli, Jorge-Arnulfo Quiané-Ruiz, and Ziawasch Abedjan
+								<b> MATE: Multi-Attribute Table Extraction (PVLDB 2022)</b>
+								[<a href="https://www.vldb.org/pvldb/vol15/p1684-esmailoghli.pdf">pdf</a>]
+								<span class="expando" id="expand-18">[Video]</span>
+								<div class="expandable" id="expandable-18">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/4AqNzk9x1_c">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Kavitha Srinivas, Julian Dolby, Ibrahim Abdelaziz, Oktie Hassanzadeh, Harsha
+								Kokel, Aamod Khatiwada, Tejaswini Pedapati, Subhajit Chaudhury, Horst Samulowitz
+								<b>LakeBench: Fine-Tuning Benchmarks for Data Discovery over
+									Data Lakes (arxiv 2023)</b>
+								[<a href="https://arxiv.org/pdf/2307.04217.pdf">pdf</a>]
+								<span class="expando" id="expand-19">[Video]</span>
+								<div class="expandable" id="expandable-19">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/DKmDIIlVB-s">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Nora Abdelmageed, Sirko Schindler
+								<b>JenTab: A Toolkit for Semantic Table Annotations (KGCW@ESWC 2021)</b>
+								[<a href="https://openreview.net/pdf?id=aZUGsoLdpa">pdf</a>]
+								<span class="expando" id="expand-20">[Video]</span>
+								<div class="expandable" id="expandable-20">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/oJEvBVubXyI">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<tr>
+							<td>
+								(Invited) Madelon Hulsebos, Çagatay Demiralp, and Paul Groth
+								<b> GitTables: A Large-Scale Corpus of Relational Tables (SIGMOD 2023)</b>
+								[<a href="https://arxiv.org/pdf/2106.07258.pdf">pdf</a>]
+								<span class="expando" id="expand-21">[Video]</span>
+								<div class="expandable" id="expandable-21">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/sqckTo4g_gs">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
+						<!-- 						
+						<tr>
+							<td>
+								(Invited)
+								<b> ()</b>
+								[<a href="">pdf</a>]
+								<span class="expando" id="expand-22">[Video]</span>
+								<div class="expandable" id="expandable-22">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+ 						-->
+
 					</table>
 				</div>
 			</section>
