video showcase page links

--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
 				<li><a href="#program">Program</a></li>
 				<li><a href="#papers">Accepted Papers</a></li>
 				<li><a href="#organization">Organization</a></li>
+				<li><a href="video-showcase.html">Video Showcase</a></li>
 			</ul>
 		</nav>
 
 		<!-- Main -->
 		<div id="main">
+
 
 			<!-- Objectives -->
 			<section id="objectives" class="main">
