--- a/video-showcase.html
+++ b/video-showcase.html
@@ -55,7 +55,8 @@
 			<ul>
 				<li><a href="index.html" class="active">Workshop Website</a></li>
 				<li><a href="#papers" class="active">Papers & Videos</a></li>
-				<li><a href="index.html" class="active">YouTube Channel</a></li>
+				<li><a href="https://www.youtube.com/playlist?list=PLqL0lIybsZEzcVn3rP3mVNUN-4Ry-0GL9"
+						class="active">YouTube Channel</a></li>
 			</ul>
 		</nav>
 
