--- a/video-showcase.html
+++ b/video-showcase.html
@@ -102,7 +102,9 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA4.pdf">pdf</a>]
 								<span class="expando" id="expand-3">[Video]</span>
 								<div class="expandable" id="expandable-3">
-									Video Not Available Yet. Please Check Back Later.
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/TdAEvdOVZp0">
+									</iframe>
 								</div>
 							</td>
 						</tr>
