video showcase link in footer

--- a/index.html
+++ b/index.html
@@ -510,6 +510,16 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section>
+				<h2><a href="video-showcase.html">Video Showcase</a></h2>
+				<p>
+					Selected presentations from TaDA Workshop and other venues, covering various trending topics of
+					research
+					in Tabular Data Analysis for data lakes.
+				<h2>
+					<a href="https://www.youtube.com/playlist?list=PLqL0lIybsZEzcVn3rP3mVNUN-4Ry-0GL9"
+						class="active">YouTube Channel</a>
+				</h2>
+				</p>
 				<h2>Sponsors</h2>
 				<p>Please contact the organizers if you are interested in sponsoring this workshop.</p>
 			</section>
