--- a/video-showcase.html
+++ b/video-showcase.html
@@ -372,14 +372,30 @@
 							</td>
 						</tr>
 
+						<tr>
+							<td>
+								(Invited) Xuming Hu, Shen Wang, Xiao Qin, Chuan Lei, Zhengyuan Shen, Christos Faloutsos,
+								Asterios Katsifodimos, George Karypis, Lijie Wen, Philip S. Yu
+								<b>Automatic Table Union Search with Tabular Representation Learning (ACL Findings
+									2023)</b>
+								[<a href="https://aclanthology.org/2023.findings-acl.233.pdf">pdf</a>]
+								<span class="expando" id="expand-22">[Video]</span>
+								<div class="expandable" id="expandable-22">
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/TgRBUtHld3s">
+									</iframe>
+								</div>
+							</td>
+						</tr>
+
 						<!-- 						
 						<tr>
 							<td>
 								(Invited)
 								<b> ()</b>
 								[<a href="">pdf</a>]
-								<span class="expando" id="expand-22">[Video]</span>
-								<div class="expandable" id="expandable-22">
+								<span class="expando" id="expand-23">[Video]</span>
+								<div class="expandable" id="expandable-23">
 									<iframe frameborder="0" allowfullscreen class="youtube-video"
 										src="https://www.youtube.com/embed/">
 									</iframe>
