--- a/video-showcase.html
+++ b/video-showcase.html
@@ -129,7 +129,9 @@
 								[<a href="https://ceur-ws.org/Vol-3462/TADA6.pdf">pdf</a>]
 								<span class="expando" id="expand-5">[Video]</span>
 								<div class="expandable" id="expandable-5">
-									Video Not Available Yet. Please Check Back Later.
+									<iframe frameborder="0" allowfullscreen class="youtube-video"
+										src="https://www.youtube.com/embed/YsXS0xNihmE">
+									</iframe>
 								</div>
 							</td>
 						</tr>
@@ -428,7 +430,7 @@
 		content_id = '#expandable-'.concat(target_num);
 		$(content_id).slideToggle('fast');
 	});
-	  //]]>
+	//]]>
 </script>
 
 </html>
