link to next edition

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 
 <body class="is-preload">
 
+	<!-- Edition Navigation Box -->
+	<div class="edition-box edition-box-right">
+		<a href="https://tabular-data-analysis.github.io/tada2024/">TaDA 2024</a>
+	</div>
+
 	<!-- Wrapper -->
 	<div id="wrapper">
 
